Floats and clear update

--- a/mod02-10/css/style.css
+++ b/mod02-10/css/style.css
@@ -63,13 +63,14 @@
 	background-color: #b2d6ff;
 	float: left;
 	margin: 20px 1.16%;
+	position: relative;
 }
 
-.avatar	{
-	width: 60px;
-	height: 60px;
+.avatar > img	{
+	width: 70px;
+	height: 70px;
 	background-color: #d6e9fe;
-	border-radius: 50%;
+	border-radius: 10%;
 	margin: 25px;
 	float: left;
 }
@@ -93,4 +94,48 @@
 	content: ""; /*empty string ot invisible element*/
 	clear: both;
 	display: block;
+}
+
+/*
+*
+* CSS workaround for multiline ellipsis
+*
+*/
+
+.block-with-text {
+	overflow: hidden;
+	position: relative;
+	line-height: 1.2em;
+	max-height: 3.6em;
+	text-align: justify;
+	margin-right: -1em;
+	padding-right: 30px;
+
+}
+
+/* for comments longer than alloted height*/
+.block-with-text: before {
+	content: "...";
+	position: absolute;
+	right: 17px;
+	bottom: 0;
+}
+
+/* for comments shorter than alloted height*/
+.block-with-text: after {
+	content: "";
+	position: absolute;
+	right: 17px;
+	width: 1em;
+	height: 1em;
+	margin-top: 0.2em;
+	background:#b2d6ff;
+	
+}
+
+.read-more {
+	position: absolute;
+	right: 10px;
+	bottom: 10px;
+
 }
